--- a/profile/profile/style.css
+++ b/profile/profile/style.css
@@ -6,7 +6,8 @@
 body {
   background-color: ##6638f0;
   color: black;
-  font-family: 'Playfair Display', serif;g
+  font-family: 'Playfair Display', serif;
+
 }
 h1 {
   color: #c93fa8;
